fix(notifications panel): set high z-index
So the panel does not get hidden by overlapping elements.

--- a/resources/less/common.less
+++ b/resources/less/common.less
@@ -82,6 +82,7 @@ h3 {
   bottom: 10px;
   right: 30px;
   max-width: 80%;
+  z-index: 999;
 }
 
 a {
